tenants/base/pauwels-labs-main/workload/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: pauwels-labs-main
  name: pauwels-labs-main
