tenants/base/pauwels-labs-main/workload/virtualservice-pauwels-labs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pauwels-labs-main
  namespace: istio-system
spec:
  hosts:
  - dev.pauwelslabs.com
  gateways:
  - istio-ingress/pauwels-labs
  http:
  - name: "root"
    match:
    - uri:
        prefix: /t/pauwels-labs-main
    rewrite:
      uri: /
    delegate:
      name: pauwels-labs-main
      namespace: pauwels-labs-main
